switched concurrency mode to reentrant, bindings to "netTcp"... still acting all single threaded

--- a/WCF Examples/ConcurrencyDemo/ConcurrentClient/App.config
+++ b/WCF Examples/ConcurrencyDemo/ConcurrentClient/App.config
@@ -5,37 +5,37 @@
     </startup>
     <system.serviceModel>
         <bindings>
-            <wsDualHttpBinding>
+          <netTcpBinding>
                 <binding name="WSDualHttpBinding_IService" />
                 <binding name="WSDualHttpBinding_IService1" />
                 <binding name="WSDualHttpBinding_IService2" />
                 <binding name="WSDualHttpBinding_IService3" />
                 <binding name="WSDualHttpBinding_IService4" />
                 <binding name="WSDualHttpBinding_IService5" />
-            </wsDualHttpBinding>
+            </netTcpBinding>
         </bindings>
         <client>
-            <endpoint address="http://localhost:12001/status" binding="wsDualHttpBinding"
+            <endpoint address="net.tcp://localhost:12001/status" binding="netTcpBinding"
                 bindingConfiguration="WSDualHttpBinding_IService" contract="ConcurrentServices.IService"
                 name="WSDualHttpBinding_IService">
             </endpoint>
-            <endpoint address="http://localhost:12002/status" binding="wsDualHttpBinding"
+            <endpoint address="net.tcp://localhost:12002/status" binding="netTcpBinding"
                 bindingConfiguration="WSDualHttpBinding_IService1" contract="ConcurrentServices.IService"
                 name="WSDualHttpBinding_IService1">
             </endpoint>
-            <endpoint address="http://localhost:12003/status" binding="wsDualHttpBinding"
+            <endpoint address="net.tcp://localhost:12003/status" binding="netTcpBinding"
                 bindingConfiguration="WSDualHttpBinding_IService2" contract="ConcurrentServices.IService"
                 name="WSDualHttpBinding_IService2">
             </endpoint>
-            <endpoint address="http://localhost:12004/status" binding="wsDualHttpBinding"
+            <endpoint address="net.tcp://localhost:12004/status" binding="netTcpBinding"
                 bindingConfiguration="WSDualHttpBinding_IService3" contract="ConcurrentServices.IService"
                 name="WSDualHttpBinding_IService3">
             </endpoint>
-            <endpoint address="http://localhost:12005/status" binding="wsDualHttpBinding"
+            <endpoint address="net.tcp://localhost:12005/status" binding="netTcpBinding"
                 bindingConfiguration="WSDualHttpBinding_IService4" contract="ConcurrentServices.IService"
                 name="WSDualHttpBinding_IService4">
             </endpoint>
-            <endpoint address="http://localhost:12006/status" binding="wsDualHttpBinding"
+            <endpoint address="net.tcp://localhost:12006/status" binding="netTcpBinding"
                 bindingConfiguration="WSDualHttpBinding_IService5" contract="ConcurrentServices.IService"
                 name="WSDualHttpBinding_IService5">
             </endpoint>
