--- a/WCF Examples/ConcurrencyDemo/ConcurrentServices/App.config
+++ b/WCF Examples/ConcurrencyDemo/ConcurrentServices/App.config
@@ -7,79 +7,79 @@
     <services>
       <service name="ConcurrentServices.Services.PerCall_Multi_Service">
         <endpoint address="status"
-                  binding="wsDualHttpBinding"
+                  binding="netTcpBinding"
                   contract="ConcurrentServices.IService" />
         <endpoint address="mex"
-                  binding="mexHttpBinding"
+                  binding="mexTcpBinding"
                   contract="IMetadataExchange" />
         <host>
           <baseAddresses>
-            <add baseAddress="http://localhost:12001/" />
+            <add baseAddress="net.tcp://localhost:12001/" />
           </baseAddresses>
         </host>
       </service>
       <service name="ConcurrentServices.Services.PerCall_Single_Service">
         <endpoint address="status"
-                  binding="wsDualHttpBinding"
+                  binding="netTcpBinding"
                   contract="ConcurrentServices.IService" />
         <endpoint address="mex"
-                  binding="mexHttpBinding"
+                  binding="mexTcpBinding"
                   contract="IMetadataExchange" />
         <host>
           <baseAddresses>
-            <add baseAddress="http://localhost:12002/" />
+            <add baseAddress="net.tcp://localhost:12002/" />
           </baseAddresses>
         </host>
       </service>
       <service name="ConcurrentServices.Services.PerSession_Multi_Service">
         <endpoint address="status"
-                  binding="wsDualHttpBinding"
+                  binding="netTcpBinding"
                   contract="ConcurrentServices.IService" />
         <endpoint address="mex"
-                  binding="mexHttpBinding"
+                  binding="mexTcpBinding"
                   contract="IMetadataExchange" />
         <host>
           <baseAddresses>
-            <add baseAddress="http://localhost:12003/" />
+            <add baseAddress="net.tcp://localhost:12003/" />
           </baseAddresses>
         </host>
       </service>
       <service name="ConcurrentServices.Services.PerSession_Single_Service">
         <endpoint address="status"
-                  binding="wsDualHttpBinding"
+                  binding="netTcpBinding"
                   contract="ConcurrentServices.IService" />
         <endpoint address="mex"
-                  binding="mexHttpBinding"
+                  binding="mexTcpBinding"
                   contract="IMetadataExchange" />
         <host>
           <baseAddresses>
-            <add baseAddress="http://localhost:12004/" />
+            <add baseAddress="net.tcp://localhost:12004/" />
           </baseAddresses>
         </host>
       </service>
       <service name="ConcurrentServices.Services.Singleton_Multi_Service">
         <endpoint address="status"
-                  binding="wsDualHttpBinding"
+                  binding="netTcpBinding"
                   contract="ConcurrentServices.IService" />
         <endpoint address="mex"
-                  binding="mexHttpBinding"
+                  binding="mexTcpBinding"
                   contract="IMetadataExchange" />
         <host>
           <baseAddresses>
-            <add baseAddress="http://localhost:12005/" />
+            <add baseAddress="net.tcp://localhost:12005/" />
           </baseAddresses>
         </host>
       </service>
       <service name="ConcurrentServices.Services.Singleton_Single_Service">
         <endpoint address="status"
-                  binding="wsDualHttpBinding"
+                  binding="netTcpBinding"
                   contract="ConcurrentServices.IService" />
         <endpoint address="mex"
-                  binding="mexHttpBinding"
+                  binding="mexTcpBinding"
                   contract="IMetadataExchange" />
         <host>
           <baseAddresses>
-            <add baseAddress="http://localhost:12006/" />
+            <add baseAddress="net.tcp://localhost:12006/" />
           </baseAddresses>
         </host>
       </service>
@@ -87,7 +87,7 @@
     <behaviors>
       <serviceBehaviors>
         <behavior>
-          <serviceMetadata httpGetEnabled="true"/>
+          <serviceMetadata/>
         </behavior>
       </serviceBehaviors>
     </behaviors>
