reentrant is goofy

--- a/WCF Examples/ConcurrencyDemo/ConcurrentClient/App.config
+++ b/WCF Examples/ConcurrencyDemo/ConcurrentClient/App.config
@@ -5,40 +5,46 @@
     </startup>
     <system.serviceModel>
         <bindings>
-          <netTcpBinding>
-                <binding name="WSDualHttpBinding_IService" />
-                <binding name="WSDualHttpBinding_IService1" />
-                <binding name="WSDualHttpBinding_IService2" />
-                <binding name="WSDualHttpBinding_IService3" />
-                <binding name="WSDualHttpBinding_IService4" />
-                <binding name="WSDualHttpBinding_IService5" />
+            <netTcpBinding>
+                <binding name="WSDualHttpBinding_IService"  openTimeout="00:10:00" closeTimeout="00:10:00" sendTimeout="00:10:00" receiveTimeout="00:10:00"/>
+                <binding name="WSDualHttpBinding_IService1" openTimeout="00:10:00" closeTimeout="00:10:00" sendTimeout="00:10:00" receiveTimeout="00:10:00"/>
+                <binding name="WSDualHttpBinding_IService2" openTimeout="00:10:00" closeTimeout="00:10:00" sendTimeout="00:10:00" receiveTimeout="00:10:00"/>
+                <binding name="WSDualHttpBinding_IService3" openTimeout="00:10:00" closeTimeout="00:10:00" sendTimeout="00:10:00" receiveTimeout="00:10:00"/>
+                <binding name="WSDualHttpBinding_IService4" openTimeout="00:10:00" closeTimeout="00:10:00" sendTimeout="00:10:00" receiveTimeout="00:10:00"/>
+                <binding name="WSDualHttpBinding_IService5" openTimeout="00:10:00" closeTimeout="00:10:00" sendTimeout="00:10:00" receiveTimeout="00:10:00"/>
+                <binding name="NetTcpBinding_IService" openTimeout="00:10:00" closeTimeout="00:10:00" sendTimeout="00:10:00" receiveTimeout="00:10:00"/>
+                <binding name="NetTcpBinding_IService1" openTimeout="00:10:00" closeTimeout="00:10:00" sendTimeout="00:10:00" receiveTimeout="00:10:00"/>
+                <binding name="NetTcpBinding_IService2" openTimeout="00:10:00" closeTimeout="00:10:00" sendTimeout="00:10:00" receiveTimeout="00:10:00"/>
             </netTcpBinding>
         </bindings>
         <client>
             <endpoint address="net.tcp://localhost:12001/status" binding="netTcpBinding"
                 bindingConfiguration="WSDualHttpBinding_IService" contract="ConcurrentServices.IService"
-                name="WSDualHttpBinding_IService">
-            </endpoint>
+                name="WSDualHttpBinding_IService" />
             <endpoint address="net.tcp://localhost:12002/status" binding="netTcpBinding"
                 bindingConfiguration="WSDualHttpBinding_IService1" contract="ConcurrentServices.IService"
-                name="WSDualHttpBinding_IService1">
-            </endpoint>
+                name="WSDualHttpBinding_IService1" />
             <endpoint address="net.tcp://localhost:12003/status" binding="netTcpBinding"
                 bindingConfiguration="WSDualHttpBinding_IService2" contract="ConcurrentServices.IService"
-                name="WSDualHttpBinding_IService2">
-            </endpoint>
+                name="WSDualHttpBinding_IService2" />
             <endpoint address="net.tcp://localhost:12004/status" binding="netTcpBinding"
                 bindingConfiguration="WSDualHttpBinding_IService3" contract="ConcurrentServices.IService"
-                name="WSDualHttpBinding_IService3">
-            </endpoint>
+                name="WSDualHttpBinding_IService3" />
             <endpoint address="net.tcp://localhost:12005/status" binding="netTcpBinding"
                 bindingConfiguration="WSDualHttpBinding_IService4" contract="ConcurrentServices.IService"
-                name="WSDualHttpBinding_IService4">
-            </endpoint>
+                name="WSDualHttpBinding_IService4" />
             <endpoint address="net.tcp://localhost:12006/status" binding="netTcpBinding"
                 bindingConfiguration="WSDualHttpBinding_IService5" contract="ConcurrentServices.IService"
-                name="WSDualHttpBinding_IService5">
-            </endpoint>
+                name="WSDualHttpBinding_IService5" />
+            <endpoint address="net.tcp://localhost:12007/status" binding="netTcpBinding"
+                bindingConfiguration="NetTcpBinding_IService" contract="ConcurrentServices.IService"
+                name="NetTcpBinding_IService"/>
+            <endpoint address="net.tcp://localhost:12008/status" binding="netTcpBinding"
+                bindingConfiguration="NetTcpBinding_IService1" contract="ConcurrentServices.IService"
+                name="NetTcpBinding_IService1"/>
+            <endpoint address="net.tcp://localhost:12009/status" binding="netTcpBinding"
+                bindingConfiguration="NetTcpBinding_IService2" contract="ConcurrentServices.IService"
+                name="NetTcpBinding_IService2"/>
         </client>
     </system.serviceModel>
 </configuration>
