--- a/WCF Examples/ConcurrencyDemo/ConcurrentServices/App.config
+++ b/WCF Examples/ConcurrencyDemo/ConcurrentServices/App.config
@@ -4,6 +4,11 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
   <system.serviceModel>
+    <bindings>
+      <netTcpBinding>
+        <binding openTimeout="00:10:00" closeTimeout="00:10:00" sendTimeout="00:10:00" receiveTimeout="00:10:00" />
+      </netTcpBinding>
+    </bindings>
     <services>
       <service name="ConcurrentServices.Services.PerCall_Multi_Service">
         <endpoint address="status"
@@ -80,6 +85,45 @@
         <host>
           <baseAddresses>
             <add baseAddress="net.tcp://localhost:12006/" />
+          </baseAddresses>
+        </host>
+      </service>
+          <service name="ConcurrentServices.Services.PerCall_Reentrant_Service">
+        <endpoint address="status"
+                  binding="netTcpBinding"
+                  contract="ConcurrentServices.IService" />
+        <endpoint address="mex"
+                  binding="mexTcpBinding"
+                  contract="IMetadataExchange" />
+        <host>
+          <baseAddresses>
+            <add baseAddress="net.tcp://localhost:12007/" />
+          </baseAddresses>
+        </host>
+      </service>
+      <service name="ConcurrentServices.Services.PerSession_Reentrant_Service">
+        <endpoint address="status"
+                  binding="netTcpBinding"
+                  contract="ConcurrentServices.IService" />
+        <endpoint address="mex"
+                  binding="mexTcpBinding"
+                  contract="IMetadataExchange" />
+        <host>
+          <baseAddresses>
+            <add baseAddress="net.tcp://localhost:12008/" />
+          </baseAddresses>
+        </host>
+      </service>
+      <service name="ConcurrentServices.Services.Singleton_Reentrant_Service">
+        <endpoint address="status"
+                  binding="netTcpBinding"
+                  contract="ConcurrentServices.IService" />
+        <endpoint address="mex"
+                  binding="mexTcpBinding"
+                  contract="IMetadataExchange" />
+        <host>
+          <baseAddresses>
+            <add baseAddress="net.tcp://localhost:12009/" />
           </baseAddresses>
         </host>
       </service>
