basic IIS hosted example partially working, still something up with the client

--- a/WCF Examples/ConcurrencyDemo/ConcurrentServices/App.config
+++ b/WCF Examples/ConcurrencyDemo/ConcurrentServices/App.config
@@ -1,129 +1,93 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
     </startup>
   <system.serviceModel>
     <bindings>
       <netTcpBinding>
-        <binding openTimeout="00:10:00" closeTimeout="00:10:00" sendTimeout="00:10:00" receiveTimeout="00:10:00" />
+        <binding openTimeout="00:10:00" closeTimeout="00:10:00" sendTimeout="00:10:00" receiveTimeout="00:10:00"/>
       </netTcpBinding>
     </bindings>
     <services>
       <service name="ConcurrentServices.Services.PerCall_Multi_Service">
-        <endpoint address="status"
-                  binding="netTcpBinding"
-                  contract="ConcurrentServices.IService" />
-        <endpoint address="mex"
-                  binding="mexTcpBinding"
-                  contract="IMetadataExchange" />
+        <endpoint address="status" binding="netTcpBinding" contract="ConcurrentServices.IService"/>
+        <endpoint address="mex" binding="mexTcpBinding" contract="IMetadataExchange"/>
         <host>
           <baseAddresses>
-            <add baseAddress="net.tcp://localhost:12001/" />
+            <add baseAddress="net.tcp://localhost:12001/"/>
           </baseAddresses>
         </host>
       </service>
       <service name="ConcurrentServices.Services.PerCall_Single_Service">
-        <endpoint address="status"
-                  binding="netTcpBinding"
-                  contract="ConcurrentServices.IService" />
-        <endpoint address="mex"
-                  binding="mexTcpBinding"
-                  contract="IMetadataExchange" />
+        <endpoint address="status" binding="netTcpBinding" contract="ConcurrentServices.IService"/>
+        <endpoint address="mex" binding="mexTcpBinding" contract="IMetadataExchange"/>
         <host>
           <baseAddresses>
-            <add baseAddress="net.tcp://localhost:12002/" />
+            <add baseAddress="net.tcp://localhost:12002/"/>
           </baseAddresses>
         </host>
       </service>
       <service name="ConcurrentServices.Services.PerSession_Multi_Service">
-        <endpoint address="status"
-                  binding="netTcpBinding"
-                  contract="ConcurrentServices.IService" />
-        <endpoint address="mex"
-                  binding="mexTcpBinding"
-                  contract="IMetadataExchange" />
+        <endpoint address="status" binding="netTcpBinding" contract="ConcurrentServices.IService"/>
+        <endpoint address="mex" binding="mexTcpBinding" contract="IMetadataExchange"/>
         <host>
           <baseAddresses>
-            <add baseAddress="net.tcp://localhost:12003/" />
+            <add baseAddress="net.tcp://localhost:12003/"/>
           </baseAddresses>
         </host>
       </service>
       <service name="ConcurrentServices.Services.PerSession_Single_Service">
-        <endpoint address="status"
-                  binding="netTcpBinding"
-                  contract="ConcurrentServices.IService" />
-        <endpoint address="mex"
-                  binding="mexTcpBinding"
-                  contract="IMetadataExchange" />
+        <endpoint address="status" binding="netTcpBinding" contract="ConcurrentServices.IService"/>
+        <endpoint address="mex" binding="mexTcpBinding" contract="IMetadataExchange"/>
         <host>
           <baseAddresses>
-            <add baseAddress="net.tcp://localhost:12004/" />
+            <add baseAddress="net.tcp://localhost:12004/"/>
           </baseAddresses>
         </host>
       </service>
       <service name="ConcurrentServices.Services.Singleton_Multi_Service">
-        <endpoint address="status"
-                  binding="netTcpBinding"
-                  contract="ConcurrentServices.IService" />
-        <endpoint address="mex"
-                  binding="mexTcpBinding"
-                  contract="IMetadataExchange" />
+        <endpoint address="status" binding="netTcpBinding" contract="ConcurrentServices.IService"/>
+        <endpoint address="mex" binding="mexTcpBinding" contract="IMetadataExchange"/>
         <host>
           <baseAddresses>
-            <add baseAddress="net.tcp://localhost:12005/" />
+            <add baseAddress="net.tcp://localhost:12005/"/>
           </baseAddresses>
         </host>
       </service>
       <service name="ConcurrentServices.Services.Singleton_Single_Service">
-        <endpoint address="status"
-                  binding="netTcpBinding"
-                  contract="ConcurrentServices.IService" />
-        <endpoint address="mex"
-                  binding="mexTcpBinding"
-                  contract="IMetadataExchange" />
+        <endpoint address="status" binding="netTcpBinding" contract="ConcurrentServices.IService"/>
+        <endpoint address="mex" binding="mexTcpBinding" contract="IMetadataExchange"/>
         <host>
           <baseAddresses>
-            <add baseAddress="net.tcp://localhost:12006/" />
+            <add baseAddress="net.tcp://localhost:12006/"/>
           </baseAddresses>
         </host>
       </service>
           <service name="ConcurrentServices.Services.PerCall_Reentrant_Service">
-        <endpoint address="status"
-                  binding="netTcpBinding"
-                  contract="ConcurrentServices.IService" />
-        <endpoint address="mex"
-                  binding="mexTcpBinding"
-                  contract="IMetadataExchange" />
+        <endpoint address="status" binding="netTcpBinding" contract="ConcurrentServices.IService"/>
+        <endpoint address="mex" binding="mexTcpBinding" contract="IMetadataExchange"/>
         <host>
           <baseAddresses>
-            <add baseAddress="net.tcp://localhost:12007/" />
+            <add baseAddress="net.tcp://localhost:12007/"/>
           </baseAddresses>
         </host>
       </service>
       <service name="ConcurrentServices.Services.PerSession_Reentrant_Service">
-        <endpoint address="status"
-                  binding="netTcpBinding"
-                  contract="ConcurrentServices.IService" />
-        <endpoint address="mex"
-                  binding="mexTcpBinding"
-                  contract="IMetadataExchange" />
+        <endpoint address="status" binding="netTcpBinding" contract="ConcurrentServices.IService"/>
+        <endpoint address="mex" binding="mexTcpBinding" contract="IMetadataExchange"/>
         <host>
           <baseAddresses>
-            <add baseAddress="net.tcp://localhost:12008/" />
+            <add baseAddress="net.tcp://localhost:12008/"/>
           </baseAddresses>
         </host>
       </service>
       <service name="ConcurrentServices.Services.Singleton_Reentrant_Service">
-        <endpoint address="status"
-                  binding="netTcpBinding"
-                  contract="ConcurrentServices.IService" />
-        <endpoint address="mex"
-                  binding="mexTcpBinding"
-                  contract="IMetadataExchange" />
+        <endpoint address="status" binding="netTcpBinding" contract="ConcurrentServices.IService"/>
+        <endpoint address="mex" binding="mexTcpBinding" contract="IMetadataExchange"/>
         <host>
           <baseAddresses>
-            <add baseAddress="net.tcp://localhost:12009/" />
+            <add baseAddress="net.tcp://localhost:12009/"/>
           </baseAddresses>
         </host>
       </service>
