finally got it to work with IIS

--- a/WCF Examples/ConcurrencyDemo/IISHosted/IISHosted.csproj
+++ b/WCF Examples/ConcurrencyDemo/IISHosted/IISHosted.csproj
@@ -63,14 +63,19 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Service1.svc" />
+    <Content Include="SR.svc" />
+    <Content Include="PSR.svc" />
+    <Content Include="PCR.svc" />
+    <Content Include="SS.svc" />
+    <Content Include="SM.svc" />
+    <Content Include="PSS.svc" />
+    <Content Include="PSM.svc" />
+    <Content Include="PCS.svc" />
+    <Content Include="PCM.svc" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Factory.cs" />
-    <Compile Include="Service1.svc.cs">
-      <DependentUpon>Service1.svc</DependentUpon>
-    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
