--- a/WCF Examples/ConcurrencyDemo/IISHosted/Web.config
+++ b/WCF Examples/ConcurrencyDemo/IISHosted/Web.config
@@ -3,79 +3,86 @@
   <appSettings/>
   <system.web>
     <compilation debug="true" targetFramework="4.0"/>
+    <customErrors mode="Off"/>
     <httpRuntime/>
   </system.web>
-    <system.serviceModel>
-    <services>
+  <system.serviceModel>
+    <diagnostics>
+      <messageLogging
+           logEntireMessage="true"
+           logMalformedMessages="false"
+           logMessagesAtServiceLevel="false"
+           logMessagesAtTransportLevel="true"
+           maxMessagesToLog="3000"
+           maxSizeOfMessageToLog="2000000"/>
+    </diagnostics>
+    <!--<services>
       <service name="ConcurrentServices.Services.PerCall_Multi_Service">
         <host>
           <baseAddresses>
-            <add baseAddress="http://localhost:12001/concurrency/Service1.svc" />
+            <add baseAddress="net.tcp://localhost:12001/concurrency/Service1.svc" />
           </baseAddresses>
         </host>
       </service>
       <service name="ConcurrentServices.Services.PerCall_Single_Service">
         <host>
           <baseAddresses>
-            <add baseAddress="http://localhost:12002/concurrency/Service1.svc" />
+            <add baseAddress="net.tcp://localhost:12002/concurrency/Service1.svc" />
           </baseAddresses>
         </host>
       </service>
       <service name="ConcurrentServices.Services.PerSession_Multi_Service">
         <host>
           <baseAddresses>
-            <add baseAddress="http://localhost:12003/concurrency/Service1.svc" />
+            <add baseAddress="net.tcp://localhost:12003/concurrency/Service1.svc" />
           </baseAddresses>
         </host>
       </service>
       <service name="ConcurrentServices.Services.PerSession_Single_Service">
         <host>
           <baseAddresses>
-            <add baseAddress="http://localhost:12004/concurrency/Service1.svc" />
+            <add baseAddress="net.tcp://localhost:12004/concurrency/Service1.svc" />
           </baseAddresses>
         </host>
       </service>
       <service name="ConcurrentServices.Services.Singleton_Multi_Service">
         <host>
           <baseAddresses>
-            <add baseAddress="http://localhost:12005/concurrency/Service1.svc" />
+            <add baseAddress="net.tcp://localhost:12005/concurrency/Service1.svc" />
           </baseAddresses>
         </host>
       </service>
       <service name="ConcurrentServices.Services.Singleton_Single_Service">
         <host>
           <baseAddresses>
-            <add baseAddress="http://localhost:12006/concurrency/Service1.svc" />
+            <add baseAddress="net.tcp://localhost:12006/concurrency/Service1.svc" />
           </baseAddresses>
         </host>
       </service>
       <service name="ConcurrentServices.Services.PerCall_Reentrant_Service">
         <host>
           <baseAddresses>
-            <add baseAddress="http://localhost:12007/concurrency/Service1.svc" />
+            <add baseAddress="net.tcp://localhost:12007/concurrency/Service1.svc" />
           </baseAddresses>
         </host>
       </service>
       <service name="ConcurrentServices.Services.PerSession_Reentrant_Service">
         <host>
           <baseAddresses>
-            <add baseAddress="http://localhost:12008/concurrency/Service1.svc" />
+            <add baseAddress="net.tcp://localhost:12008/concurrency/Service1.svc" />
           </baseAddresses>
         </host>
       </service>
       <service name="ConcurrentServices.Services.Singleton_Reentrant_Service">
         <host>
           <baseAddresses>
-            <add baseAddress="http://localhost:12009/concurrency/Service1.svc" />
+            <add baseAddress="net.tcp://localhost:12009/concurrency/Service1.svc" />
           </baseAddresses>
         </host>
       </service>
-    </services>
+    </services>-->
     <serviceHostingEnvironment aspNetCompatibilityEnabled="false" multipleSiteBindingsEnabled="true"/>
   </system.serviceModel>
-  <system.web>
-    <customErrors mode="Off"/>
-  </system.web>
   <system.webServer>
     <modules runAllManagedModulesForAllRequests="true"/>
       <!--
@@ -84,4 +91,38 @@
       -->
     <directoryBrowse enabled="true"/>
   </system.webServer>
-</configuration>
+  <system.diagnostics>
+    <trace autoflush="true" indentsize="4">
+      <listeners>
+        <add name="myListener" type="System.Diagnostics.TextWriterTraceListener" 
+             initializeData="D:/logs/TextWriterOutput.log" />
+        <remove name="Default" />
+      </listeners>
+    </trace>
+    <sources>
+      <source name="System.ServiceModel"
+              switchValue="Information, ActivityTracing"
+              propagateActivity="true" >
+        <listeners>
+          <add name="xml"/>
+        </listeners>
+      </source>
+      <source name="System.ServiceModel.MessageLogging">
+        <listeners>
+          <add name="xml"/>
+        </listeners>
+      </source>
+      <source name="myUserTraceSource"
+              switchValue="Information, ActivityTracing">
+        <listeners>
+          <add name="xml"/>
+        </listeners>
+      </source>
+    </sources>
+    <sharedListeners>
+      <add name="xml"
+           type="System.Diagnostics.XmlWriterTraceListener"
+           initializeData="D:/logs/log.svclog" />
+    </sharedListeners>
+  </system.diagnostics>
+  </configuration>
