--- a/WCF Examples/ConcurrencyDemo/IISClient/App.config
+++ b/WCF Examples/ConcurrencyDemo/IISClient/App.config
@@ -5,64 +5,40 @@
     </startup>
   <system.serviceModel>
     <bindings>
-      <wsDualHttpBinding>
-        <binding name="WSDualHttpBinding_IService">
+      <netTcpBinding>
+        <binding>
           <security mode="None" />
         </binding>
-        <binding name="WSDualHttpBinding_IService1">
-          <security mode="None" />
-        </binding>
-        <binding name="WSDualHttpBinding_IService2">
-          <security mode="None" />
-        </binding>
-        <binding name="WSDualHttpBinding_IService3">
-          <security mode="None" />
-        </binding>
-        <binding name="WSDualHttpBinding_IService4">
-          <security mode="None" />
-        </binding>
-        <binding name="WSDualHttpBinding_IService5">
-          <security mode="None" />
-        </binding>
-        <binding name="NetTcpBinding_IService">
-          <security mode="None" />
-        </binding>
-        <binding name="NetTcpBinding_IService1">
-          <security mode="None" />
-        </binding>
-        <binding name="NetTcpBinding_IService2">
-          <security mode="None" />
-        </binding>
-      </wsDualHttpBinding>
+      </netTcpBinding>
     </bindings>
     <client>
-      <endpoint address="http://192.168.1.148:12001/concurrency/Service1.svc/status"
-        binding="wsDualHttpBinding" bindingConfiguration="WSDualHttpBinding_IService"
-        contract="ConcurrentServices.IService" name="WSDualHttpBinding_IService" />
-      <endpoint address="http://192.168.1.148:12002/concurrency/Service1.svc/status"
-        binding="wsDualHttpBinding" bindingConfiguration="WSDualHttpBinding_IService1"
-        contract="ConcurrentServices.IService" name="WSDualHttpBinding_IService1" />
-      <endpoint address="http://192.168.1.148:12003/concurrency/Service1.svc/status"
-        binding="wsDualHttpBinding" bindingConfiguration="WSDualHttpBinding_IService2"
-        contract="ConcurrentServices.IService" name="WSDualHttpBinding_IService2" />
-      <endpoint address="http://192.168.1.148:12004/concurrency/Service1.svc/status"
-        binding="wsDualHttpBinding" bindingConfiguration="WSDualHttpBinding_IService3"
-        contract="ConcurrentServices.IService" name="WSDualHttpBinding_IService3" />
-      <endpoint address="http://192.168.1.148:12005/concurrency/Service1.svc/status"
-        binding="wsDualHttpBinding" bindingConfiguration="WSDualHttpBinding_IService4"
-        contract="ConcurrentServices.IService" name="WSDualHttpBinding_IService4" />
-      <endpoint address="http://192.168.1.148:12006/concurrency/Service1.svc/status"
-        binding="wsDualHttpBinding" bindingConfiguration="WSDualHttpBinding_IService5"
-        contract="ConcurrentServices.IService" name="WSDualHttpBinding_IService5" />
-      <endpoint address="http://192.168.1.148:12007/concurrency/Service1.svc/status"
-        binding="wsDualHttpBinding" bindingConfiguration="NetTcpBinding_IService"
-        contract="ConcurrentServices.IService" name="NetTcpBinding_IService" />
-      <endpoint address="http://192.168.1.148:12008/concurrency/Service1.svc/status"
-        binding="wsDualHttpBinding" bindingConfiguration="NetTcpBinding_IService1"
-        contract="ConcurrentServices.IService" name="NetTcpBinding_IService1" />
-      <endpoint address="http://192.168.1.148:12009/concurrency/Service1.svc/status"
-        binding="wsDualHttpBinding" bindingConfiguration="NetTcpBinding_IService2"
-        contract="ConcurrentServices.IService" name="NetTcpBinding_IService2" />
+      <endpoint address="net.tcp://192.168.1.148:12001/concurrency/PCM.svc/status"
+        binding="netTcpBinding" contract="ConcurrentServices.IService"
+        name="WSDualHttpBinding_IService" />
+      <endpoint address="net.tcp://192.168.1.148:12002/concurrency/PCS.svc/status"
+        binding="netTcpBinding" contract="ConcurrentServices.IService"
+        name="WSDualHttpBinding_IService1" />
+      <endpoint address="net.tcp://192.168.1.148:12003/concurrency/PSM.svc/status"
+        binding="netTcpBinding" contract="ConcurrentServices.IService"
+        name="WSDualHttpBinding_IService2" />
+      <endpoint address="net.tcp://192.168.1.148:12004/concurrency/PSS.svc/status"
+        binding="netTcpBinding" contract="ConcurrentServices.IService"
+        name="WSDualHttpBinding_IService3" />
+      <endpoint address="net.tcp://192.168.1.148:12005/concurrency/SM.svc/status"
+        binding="netTcpBinding" contract="ConcurrentServices.IService"
+        name="WSDualHttpBinding_IService4" />
+      <endpoint address="net.tcp://192.168.1.148:12006/concurrency/SS.svc/status"
+        binding="netTcpBinding" contract="ConcurrentServices.IService"
+        name="WSDualHttpBinding_IService5" />
+      <endpoint address="net.tcp://192.168.1.148:12007/concurrency/PCR.svc/status"
+        binding="netTcpBinding" contract="ConcurrentServices.IService"
+        name="NetTcpBinding_IService" />
+      <endpoint address="net.tcp://192.168.1.148:12008/concurrency/PSR.svc/status"
+        binding="netTcpBinding" contract="ConcurrentServices.IService"
+        name="NetTcpBinding_IService1" />
+      <endpoint address="net.tcp://192.168.1.148:12009/concurrency/SR.svc/status"
+        binding="netTcpBinding" contract="ConcurrentServices.IService"
+        name="NetTcpBinding_IService2" />
     </client>
   </system.serviceModel>
 </configuration>
