--- a/WCF Examples/ConcurrencyDemo/IISClient/IISClient.csproj
+++ b/WCF Examples/ConcurrencyDemo/IISClient/IISClient.csproj
@@ -12,6 +12,21 @@
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <PublishUrl>publish\</PublishUrl>
+    <Install>true</Install>
+    <InstallFrom>Disk</InstallFrom>
+    <UpdateEnabled>false</UpdateEnabled>
+    <UpdateMode>Foreground</UpdateMode>
+    <UpdateInterval>7</UpdateInterval>
+    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
+    <UpdatePeriodically>false</UpdatePeriodically>
+    <UpdateRequired>false</UpdateRequired>
+    <MapFileExtensions>true</MapFileExtensions>
+    <ApplicationRevision>0</ApplicationRevision>
+    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <UseApplicationTrust>false</UseApplicationTrust>
+    <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -77,11 +92,6 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Compile>
-    <Compile Include="Service References\ServiceReference1\Reference.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Reference.svcmap</DependentUpon>
-    </Compile>
     <Compile Include="Service References\SM_Reference\Reference.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -100,74 +110,67 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="Service References\PCM_Reference\Service1.wsdl" />
-    <None Include="Service References\PCM_Reference\Service1.xsd">
+    <None Include="Service References\PCM_Reference\service.wsdl" />
+    <None Include="Service References\PCM_Reference\service.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Service References\PCM_Reference\Service11.xsd">
+    <None Include="Service References\PCM_Reference\service1.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Service References\PCR_Reference\Service1.wsdl" />
-    <None Include="Service References\PCR_Reference\Service1.xsd">
+    <None Include="Service References\PCR_Reference\service.wsdl" />
+    <None Include="Service References\PCR_Reference\service.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Service References\PCR_Reference\Service11.xsd">
+    <None Include="Service References\PCR_Reference\service1.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Service References\PCS_Reference\Service1.wsdl" />
-    <None Include="Service References\PCS_Reference\Service1.xsd">
+    <None Include="Service References\PCS_Reference\service.wsdl" />
+    <None Include="Service References\PCS_Reference\service.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Service References\PCS_Reference\Service11.xsd">
+    <None Include="Service References\PCS_Reference\service1.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Service References\PSM_Reference\Service1.wsdl" />
-    <None Include="Service References\PSM_Reference\Service1.xsd">
+    <None Include="Service References\PSM_Reference\service.wsdl" />
+    <None Include="Service References\PSM_Reference\service.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Service References\PSM_Reference\Service11.xsd">
+    <None Include="Service References\PSM_Reference\service1.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Service References\PSR_Reference\Service1.wsdl" />
-    <None Include="Service References\PSR_Reference\Service1.xsd">
+    <None Include="Service References\PSR_Reference\service.wsdl" />
+    <None Include="Service References\PSR_Reference\service.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Service References\PSR_Reference\Service11.xsd">
+    <None Include="Service References\PSR_Reference\service1.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Service References\PSS_Reference\Service1.wsdl" />
-    <None Include="Service References\PSS_Reference\Service1.xsd">
+    <None Include="Service References\PSS_Reference\service.wsdl" />
+    <None Include="Service References\PSS_Reference\service.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Service References\PSS_Reference\Service11.xsd">
+    <None Include="Service References\PSS_Reference\service1.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Service References\ServiceReference1\Service1.wsdl" />
-    <None Include="Service References\ServiceReference1\Service1.xsd">
+    <None Include="Service References\SM_Reference\service.wsdl" />
+    <None Include="Service References\SM_Reference\service.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Service References\ServiceReference1\Service11.xsd">
+    <None Include="Service References\SM_Reference\service1.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Service References\SM_Reference\Service1.wsdl" />
-    <None Include="Service References\SM_Reference\Service1.xsd">
+    <None Include="Service References\SR_Reference\service.wsdl" />
+    <None Include="Service References\SR_Reference\service.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Service References\SM_Reference\Service11.xsd">
+    <None Include="Service References\SR_Reference\service1.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Service References\SR_Reference\Service1.wsdl" />
-    <None Include="Service References\SR_Reference\Service1.xsd">
+    <None Include="Service References\SS_Reference\service.wsdl" />
+    <None Include="Service References\SS_Reference\service.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Service References\SR_Reference\Service11.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="Service References\SS_Reference\Service1.wsdl" />
-    <None Include="Service References\SS_Reference\Service1.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="Service References\SS_Reference\Service11.xsd">
+    <None Include="Service References\SS_Reference\service1.xsd">
       <SubType>Designer</SubType>
     </None>
   </ItemGroup>
@@ -187,7 +190,6 @@
     <WCFMetadataStorage Include="Service References\PSM_Reference\" />
     <WCFMetadataStorage Include="Service References\PSR_Reference\" />
     <WCFMetadataStorage Include="Service References\PSS_Reference\" />
-    <WCFMetadataStorage Include="Service References\ServiceReference1\" />
     <WCFMetadataStorage Include="Service References\SM_Reference\" />
     <WCFMetadataStorage Include="Service References\SR_Reference\" />
     <WCFMetadataStorage Include="Service References\SS_Reference\" />
@@ -301,16 +303,16 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Service References\ServiceReference1\configuration91.svcinfo" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Service References\ServiceReference1\configuration.svcinfo" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Service References\ServiceReference1\Reference.svcmap">
-      <Generator>WCF Proxy Generator</Generator>
-      <LastGenOutput>Reference.cs</LastGenOutput>
-    </None>
+    <BootstrapperPackage Include=".NETFramework,Version=v4.5.2">
+      <Visible>False</Visible>
+      <ProductName>Microsoft .NET Framework 4.5.2 %28x86 and x64%29</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
