wcf transactions demo

--- a/WCF Examples/TransactionServiceDemo/TransactionClient/App.config
+++ b/WCF Examples/TransactionServiceDemo/TransactionClient/App.config
@@ -3,4 +3,20 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
+    <system.serviceModel>
+        <bindings>
+            <wsHttpBinding>
+                <binding name="WSHttpBinding_IEchoService" transactionFlow="true" />
+            </wsHttpBinding>
+        </bindings>
+        <client>
+            <endpoint address="http://localhost:60999/echo" binding="wsHttpBinding"
+                bindingConfiguration="WSHttpBinding_IEchoService" contract="EchoServiceReference.IEchoService"
+                name="WSHttpBinding_IEchoService">
+                <identity>
+                    <userPrincipalName value="twhorten@mwfbi.com" />
+                </identity>
+            </endpoint>
+        </client>
+    </system.serviceModel>
 </configuration>
