--- a/WCF Examples/TransactionServiceDemo/TransactionService/App.config
+++ b/WCF Examples/TransactionServiceDemo/TransactionService/App.config
@@ -3,4 +3,11 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
+  <system.serviceModel>
+    <bindings>
+      <wsHttpBinding>
+        <binding transactionFlow="true" />
+      </wsHttpBinding>
+    </bindings>
+  </system.serviceModel>
 </configuration>
